--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "ws": "^8.12.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server/index.ts",
+    "_server": "ts-node --files server/index.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
 }
